Add images and videos folders with media files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
-    <h1>Discover the hidden places in the world around you</h1>
-    <a href="#excursion" class="excursion">Download Excursion(Coming soon!)</a>
+    <h1>Discover hidden places in the world around you</h1>
+    <a href="#" class="excursion">Download Excursion (Coming soon!)</a>
+    <div>
+    <video autoplay muted loop>
+   <source src="resources/videos/excursion.mp4" type="video/mp4">
+   </video>
+   </div>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="resources/images/camp.webp">
 </body>
+<footer>
+    <img src="resources/images/phone.webp">
+    <h2>Coming Soon for iPhone and Android</h2>
+    <br>
+    <a href="#" class="excursion">Download Excursion (Coming soon!)</a>
+    <h4>©Excursion</h4>
+</footer>
 </html>
